--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\Systems/Systems.html"
+            href="site_coach/Systems.html"
             >Systems</a
           >
         </li>
