--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </li>
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\Counter/Counter.html"
+            href="NBA.com"
             >Counter</a
           >
         </li>
