--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </li>
         <li>
           <a
-            href="NBA.com"
+            href="https://www.beinsports.com/france/nba/?gr=www"
             >Counter</a
           >
         </li>
