--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <li>
           <a
-            href="site_coach/Systems.html"
+            href="Systems.html"
             >Systems</a
           >
         </li>
