--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
     <!-- navbar -->
     <nav id="navbar">
-      <a href="C:\Users\User\Documents\site_coach/index.html" id="Home">Home</a>
+      <a href="index.html">Home</a>
       <ul id="navbar-list">
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\One-one/One-one.html"
+            href="One-one.html"
             >One-one</a
           >
         </li>
         <li>
           <a
-            href="https://www.perplexity.ai/"
+            href="Counter.html"
             >Counter</a
           >
         </li>
