--- a/Counter.html
+++ b/Counter.html
@@ -13,23 +13,23 @@
   <body>
     <!-- navbar -->
     <nav id="navbar">
-      <a href="C:\Users\User\Documents\site_coach/index.html" id="Home">Home</a>
+      <a href="index.html">Home</a>
       <ul id="navbar-list">
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\One-one/One-one.html"
+            href="One-one.html"
             >One-one</a
           >
         </li>
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\Counter/Counter.html"
+            href="Counter.html"
             >Counter</a
           >
         </li>
         <li>
           <a
-            href="C:\Users\User\Documents\site_coach\Pages\Systems/Systems.html"
+            href="Systems.html"
             >Systems</a
           >
         </li>
