--- a/Counter.html
+++ b/Counter.html
@@ -52,7 +52,7 @@
               il se décale dans l'aile pour trouver un allié qui a pris
               l'avantage sur son défenseur.
             </span>
-            <img src="C:\Users\User\Documents\site_coach\Assets\img/CA_1.gif" />
+            <img src="CA_1.gif" />
           </li>
           <li>
             <span class="texte">
@@ -64,7 +64,7 @@
               un délai qui ne dure généralement pas plus de 4 secondes (sinon
               les défenseurs ont le temps de revenir en défense)
             </span>
-            <img src="C:\Users\User\Documents\site_coach\Assets\img/CA_2.gif" />
+            <img src="CA_2.gif" />
           </li>
           <li>
             <span class="texte">
@@ -77,7 +77,7 @@
               contre-attaque : trouver un espace libre pour tirer sans qu'un
               défenseur gêne.
             </span>
-            <img src="C:\Users\User\Documents\site_coach\Assets\img/CA_3.gif" />
+            <img src="CA_3.gif" />
           </li>
         </ul>
       </div>
