--- a/Systems.html
+++ b/Systems.html
@@ -61,7 +61,7 @@
             <td>Observe le jeu</td>
             <td>
               <img
-                src="C:\Users\User\Documents\site_coach\Assets\img/1er_mouvement.jpg"
+                src="1er_mouvement.jpg"
               />
             </td>
           </tr>
@@ -74,7 +74,7 @@
             <td>Reçoit la balle du poste 3</td>
             <td>
               <img
-                src="C:\Users\User\Documents\site_coach\Assets\img/2e_mouvement.jpg"
+                src="2e_mouvement.jpg"
               />
             </td>
           </tr>
@@ -87,7 +87,7 @@
             <td>Tente la passe au poste 4</td>
             <td>
               <img
-                src="C:\Users\User\Documents\site_coach\Assets\img/3e_mouvement.jpg"
+                src="3e_mouvement.jpg"
               />
             </td>
           </tr>
@@ -100,7 +100,7 @@
             <td>Tente la passe au poste 2</td>
             <td>
               <img
-                src="C:\Users\User\Documents\site_coach\Assets\img/4e_mouvement.jpg"
+                src="4e_mouvement.jpg"
               />
             </td>
           </tr>
