--- a/One-one.html
+++ b/One-one.html
@@ -51,7 +51,7 @@
             sur le banc au bout de 2 minutes de jeu).
             <div class="video">
               <video
-                src="C:\Users\User\Documents\site_coach\Assets\video/Dribbles.mp4"
+                src="Dribbles.mp4"
                 controls
               >
                 Error
@@ -68,7 +68,7 @@
             Curry, Kyrie Irving ou encore Jimmy Butler.
             <div class="video">
               <video
-                src="C:\Users\User\Documents\site_coach\Assets\video/Finition.mp4"
+                src="Finition.mp4"
                 controls
               >
                 Error
@@ -84,7 +84,7 @@
             complète possible.
             <div class="video">
               <video
-                src="C:\Users\User\Documents\site_coach\Assets\video/Astuces.mp4"
+                src="Astuces.mp4"
                 controls
               >
                 Error
@@ -100,7 +100,7 @@
             à miser sur le collectif et les systèmes de jeu.
             <div class="video">
               <video
-                src="C:\Users\User\Documents\site_coach\Assets\video/Highlights.mp4"
+                src="Highlights.mp4"
                 controls
               >
                 https://www.youtube.com/watch?v=7qdeqmRdZfw
